Mesa de scouter, es demasiada esenciaaaaaaaaaaaaaaaaaaa